# alphazero-chess

./: .gitignore  CHESS_LOG.md  CLAUDE.md  OPTIMIZATION_LOG.md  PINGPONG_REPORT.md  README.md  bench_d2h_ab.py  bench_encode.py  bench_roofline.py  bench_rust_selfplay.py  bench_selfplay.py  place_config.py  plot_elo.py  plot_pred_study.py  pred_study.py  pred_study_results.json  probe_bishop.py  probe_traj.py  pyproject.toml  run_bench.sh  style_bracket.json  style_probe.py  tournament_elo.py  tournament_results.json  tune_connect4_ab.py  validate_selfplay.py
alphazero/: __init__.py  agents.py  arena.py  az_mcts.py  chess_batched.py  chess_encode.py  chess_env.py  chess_env_fast.py  chess_eval.py  chess_net.py  chess_tactics.py  chess_train.py  connect4_ab.py  connect4_ab_rs.py  connect4_encode.py  connect4_env.py  connect4_net.py  encoder.py  evaluate.py  gumbel.py  mcts.py  net.py  selfplay.py  solver.py  tictactoe.py  train.py
chess_ui/: connect4_play_server.py  index.html  lichess_bot.py  play_server.py  repetition_wrapper.py
fastchess/: Cargo.toml  pyproject.toml
fastchess/c4wasm/: Cargo.toml
fastchess/c4wasm/src/: lib.rs
fastchess/src/: arena.rs  connect4.rs  connect4_v2.rs  lib.rs  selfplay.rs
scripts/: analyze_residual.py  bench_batched.py  bench_movegen.py  bench_selfplay_fast.py  diagnose_corner.py  diagnose_eval_width.py  eval_battery.py  eval_checkpoint.py  eval_mcts_vs_random.py  exp_mix_eval.py  exp_mix_train.py  gen_tactics.py  optimize.py  probe_chess_target.py  probe_gumbel_loss.py  profile_selfplay.py  run_training.py  smoke_chess.py  (+9 more)
(+25 files in other folders)
